--- a/build.properties
+++ b/build.properties
@@ -1,6 +1,6 @@
 # Ant properties for building the springapp
 
-appserver.home=C:\\Users\\Dell\\programs\\apache-tomcat-7.0.42-old
+appserver.home=C:\\Users\\Dell\\programs\\apache-tomcat-7.0.42-development
 # for Tomcat 5 use $appserver.home}/server/lib
 # for Tomcat 6 use $appserver.home}/lib
 appserver.lib=${appserver.home}\\lib
@@ -8,5 +8,5 @@ appserver.lib=${appserver.home}\\lib
 deploy.path=${appserver.home}\\webapps
 
 tomcat.manager.url=http://localhost:8080/manager
-tomcat.manager.username=tomcat
-tomcat.manager.password=admine
+tomcat.manager.username=admin
+tomcat.manager.password=admin
